<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="3"
        android:background="@color/colorPrimaryDark"
        tools:context=".Activities.LoginActivity" >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/White">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center"
                        android:src="@mipmap/ic_logo_round"
                        android:scaleType="fitCenter"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/button_bottom_border"
                                android:textColor="@color/White"
                                android:text="SIGN IN"/>

                        <Button android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@color/Transparent"
                                android:textColor="@color/White"
                                android:text="SIGN UP"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="3">

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="30px"
                                android:layout_weight="2"
                                android:orientation="vertical">

                                <android.support.design.widget.TextInputLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content">

                                        <AutoCompleteTextView
                                                android:id="@+id/login"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:hint="@string/prompt_login"
                                                android:textColor="@color/White"
                                                android:textColorHint="@color/White"
                                                android:inputType="text"
                                                android:maxLines="1"
                                                android:singleLine="true"/>

                                </android.support.design.widget.TextInputLayout>

                                <android.support.design.widget.TextInputLayout
                                        android:id="@+id/emailLayout"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:visibility="invisible">

                                        <AutoCompleteTextView
                                                android:id="@+id/email"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:hint="@string/prompt_email"
                                                android:textColor="@color/White"
                                                android:textColorHint="@color/White"
                                                android:inputType="textEmailAddress"
                                                android:maxLines="1"
                                                android:singleLine="true"/>

                                </android.support.design.widget.TextInputLayout>

                                <android.support.design.widget.TextInputLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content">

                                        <EditText
                                                android:id="@+id/password"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:hint="@string/prompt_password"
                                                android:imeActionId="6"
                                                android:imeActionLabel="@string/sign_in_caption"
                                                android:imeOptions="actionUnspecified"
                                                android:textColor="@color/White"
                                                android:textColorHint="@color/White"
                                                android:inputType="textPassword"
                                                android:maxLines="1"
                                                android:singleLine="true"/>

                                </android.support.design.widget.TextInputLayout>

                                <android.support.design.widget.TextInputLayout
                                        android:id="@+id/passwordConfirmLayout"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:visibility="invisible">

                                        <EditText
                                                android:id="@+id/passwordConfirm"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:hint="@string/prompt_password_confirm"
                                                android:imeActionId="6"
                                                android:imeActionLabel="@string/sign_up_caption"
                                                android:imeOptions="actionUnspecified"
                                                android:textColor="@color/White"
                                                android:textColorHint="@color/White"
                                                android:inputType="textPassword"
                                                android:maxLines="1"
                                                android:singleLine="true"/>

                                </android.support.design.widget.TextInputLayout>
                        </LinearLayout>

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1">

                                <Button
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="bottom"
                                        android:layout_margin="15px"
                                        android:background="@color/colorAccent"
                                        android:text="Continue"
                                        android:textColor="@color/White"/>
                        </LinearLayout>


                </LinearLayout>

        </LinearLayout>

</LinearLayout>